--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "proyectoenplayground",
+  "name": "mercadoliebre-main",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "nodemon app.js",
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
