--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "mercadoliebre",
+  "name": "mercadoliebre-main",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "nodemon app.js"
+    "test": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "Nicolas Puglisi",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nicolasPuglisi/MercadoLiebre2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nicolasPuglisi/MercadoLiebre2/issues"
+  },
+  "homepage": "https://github.com/nicolasPuglisi/MercadoLiebre2#readme",
+  "description": ""
 }
